main page fixes

--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
     <title>mostlysunny.ru - homepage</title>
     <link href='http://fonts.googleapis.com/css?family=roboto:400,700&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
     <link href="assets/css/mostlysunny.css" rel="stylesheet">
-
-    <!-- html5 shim and respond.js ie8 support of html5 elements and media queries -->
-    <!--[if lt ie 9]>
-    <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
 </head>
 <body>
-<h1>mostlysunny.ru</h1>
+<div class="center">
+    <h1>MostlySunny.ru</h1>
+    <a class="email" href="mailto:psannikov.fpi@gmail.com">E-mail</a>
+</div>
 </body>
 </html>
